added failchecks to the skeleton